--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -40,6 +40,8 @@ spec:
             image: "{{ .Values.backend.processesworker.image.name }}:{{ .Values.backend.processesworker.image.processesworkertag | default .Chart.AppVersion }}"
             imagePullPolicy: "Always"
             env:
+            - name: DOTNET_ENVIRONMENT
+              value: "{{ .Values.backend.dotnetEnvironment }}"
             {{- if .Values.postgresql.enabled }}
             - name: "PORTAL_PASSWORD"
               valueFrom:
