--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -30,17 +30,17 @@ data:
   # if secret exists, use value provided from values file (to cover update scenario) or existing value from secret or generate a random one (if keys are added later on)
   # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
   # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
-  bpdm-client-secret: {{ coalesce ( .Values.backend.processesworker.bpdm.clientSecret | b64enc ) ( index $secret.data "bpdm-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
-  clearinghouse-client-secret: {{ coalesce ( .Values.backend.processesworker.clearinghouse.clientSecret | b64enc ) ( index $secret.data "clearinghouse-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
-  custodian-client-secret: {{ coalesce ( .Values.backend.processesworker.custodian.clientSecret | b64enc ) ( index $secret.data "custodian-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
-  sdfactory-client-secret: {{ coalesce ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc ) ( index $secret.data "sdfactory-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
-  offerprovider-client-secret: {{ coalesce ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc ) ( index $secret.data "offerprovider-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  bpdm-client-secret: {{ coalesce ( .Values.backend.processesworker.bpdm.clientSecret | b64enc | quote ) ( index $secret.data "bpdm-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  clearinghouse-client-secret: {{ coalesce ( .Values.backend.processesworker.clearinghouse.clientSecret | b64enc | quote ) ( index $secret.data "clearinghouse-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  custodian-client-secret: {{ coalesce ( .Values.backend.processesworker.custodian.clientSecret | b64enc | quote ) ( index $secret.data "custodian-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  sdfactory-client-secret: {{ coalesce ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc | quote ) ( index $secret.data "sdfactory-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
+  offerprovider-client-secret: {{ coalesce ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc | quote ) ( index $secret.data "offerprovider-client-secret" ) | default ( randAlphaNum 32 | quote ) }}
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  bpdm-client-secret: {{ .Values.backend.processesworker.bpdm.clientSecret | default ( randAlphaNum 32 | quote ) }}
-  clearinghouse-client-secret: {{ .Values.backend.processesworker.clearinghouse.clientSecret | default ( randAlphaNum 32 | quote ) }}
-  custodian-client-secret: {{ .Values.backend.processesworker.custodian.clientSecret | default ( randAlphaNum 32 | quote ) }}
-  sdfactory-client-secret: {{ .Values.backend.processesworker.sdfactory.clientSecret | default ( randAlphaNum 32 | quote ) }}
-  offerprovider-client-secret: {{ .Values.backend.processesworker.offerprovider.clientSecret | default ( randAlphaNum 32 | quote ) }}
+  bpdm-client-secret: {{ ( .Values.backend.processesworker.bpdm.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  clearinghouse-client-secret: {{ ( .Values.backend.processesworker.clearinghouse.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  custodian-client-secret: {{ ( .Values.backend.processesworker.custodian.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
 {{ end }}
