chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ### Helm ###
-# Chart dependencies
+# Chart dependencies and local install
 **/charts/*.tgz
 Chart.lock
+**/values-local.yaml
 
 ### Visual Studio Code ###
 .vscode/
