feat(n2n): add config for network 2 network (#85)
Refs: CPLP-2637, CPLP-3146
Reviewed-By: Evelyn Gurschler <evelyn.gurschler@bmw.de>

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -221,6 +221,10 @@ spec:
                 secretKeyRef:
                   name: "{{ .Values.backend.mailing.secret }}"
                   key: "password"
+            - name: "NETWORKREGISTRATION__INITIALROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.portal }}"
+            - name: "NETWORKREGISTRATION__INITIALROLES__0__USERROLENAMES__0"
+              value: "{{ .Values.backend.processesworker.networkRegistration.initialRoles.role0 }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPORT"
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
