--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -23,19 +23,232 @@ metadata:
   name: portal
 spec:
   destination:
+    name: ''
     namespace: product-portal
     server: 'https://kubernetes.default.svc'
   source:
-    path: charts/portal
-    repoURL: 'https://github.com/eclipse-tractusx/portal-cd.git'
-    targetRevision: portal-1.6.0
+    path: ''
+    repoURL: 'https://eclipse-tractusx.github.io/charts/dev'
+    targetRevision: 1.6.0
     plugin:
       env:
-        - name: AVP_SECRET
-          value: vault-secret
-        - name: helm_args
-          value: '-f values.yaml -f ../../consortia/environments/values-stable.yaml'
+        - name: HELM_VALUES
+          value: |
+            portalAddress: "https://portal.stable.demo.catena-x.net"
+            portalBackendAddress: "https://portal-backend.stable.demo.catena-x.net"
+            centralidpAddress: "https://centralidp.stable.demo.catena-x.net"
+            sharedidpAddress: "https://sharedidp.stable.demo.catena-x.net"
+            semanticsAddress: "https://semantics.stable.demo.catena-x.net"
+            bpdmPartnersPoolAddress: "https://business-partners.stable.demo.catena-x.net"
+            bpdmPortalGateAddress: "https://business-partners.stable.demo.catena-x.net"
+            custodianAddress: "https://managed-identity-wallets-new.stable.demo.catena-x.net"
+            sdfactoryAddress: "https://sdfactory.stable.demo.catena-x.net"
+            clearinghouseAddress: "https://validation.test.dih-cloud.com"
+            clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
+            frontend:
+              ingress:
+                enabled: true
+                ingressClassName: "nginx"
+                annotations:
+                  nginx.ingress.kubernetes.io/rewrite-target: "/$$1"
+                  nginx.ingress.kubernetes.io/use-regex: "true"
+                  nginx.ingress.kubernetes.io/enable-cors: "true"
+                  nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000, https://*.stable.demo.catena-x.net"
+                tls:
+                  - secretName: "tls-secret"
+                    hosts:
+                      - "portal.stable.demo.catena-x.net"
+                hosts:
+                  - host: "portal.stable.demo.catena-x.net"
+                    paths:
+                      - path: "/(.*)"
+                        pathType: "Prefix"
+                        backend:
+                          service: "portal"
+                          port: 8080
+                      - path: "/registration/(.*)"
+                        pathType: "Prefix"
+                        backend:
+                          service: "registration"
+                          port: 8080
+                      - path: "/((assets|documentation)/.*)"
+                        pathType: "Prefix"
+                        backend:
+                          service: "assets"
+                          port: 8080
+            backend:
+              ingress:
+                enabled: true
+                ingressClassName: "nginx"
+                annotations:
+                  nginx.ingress.kubernetes.io/use-regex: "true"
+                  nginx.ingress.kubernetes.io/enable-cors: "true"
+                  nginx.ingress.kubernetes.io/proxy-body-size: "8m"
+                  nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000, https://*.stable.demo.catena-x.net"
+                tls:
+                  - secretName: "tls-secret"
+                    hosts:
+                      - "portal-backend.stable.demo.catena-x.net"
+                hosts:
+                  - host: "portal-backend.stable.demo.catena-x.net"
+                    paths:
+                      - path: "/api/registration"
+                        pathType: "Prefix"
+                        backend:
+                          service: "registration-service"
+                          port: 8080
+                      - path: "/api/administration"
+                        pathType: "Prefix"
+                        backend:
+                          service: "administration-service"
+                          port: 8080
+                      - path: "/api/notification"
+                        pathType: "Prefix"
+                        backend:
+                          service: "notification-service"
+                          port: 8080
+                      - path: "/api/apps"
+                        pathType: "Prefix"
+                        backend:
+                          service: "marketplace-app-service"
+                          port: 8080
+                      - path: "/api/services"
+                        pathType: "Prefix"
+                        backend:
+                          service: "services-service"
+                          port: 8080
+              keycloak:
+                central:
+                  clientId: "<path:portal/data/keycloak#central-client-id>"
+                  clientSecret: "<path:portal/data/stable/keycloak#central-client-secret>"
+                  dbConnection:
+                    password: "<path:portal/data/stable/keycloak#central-db-password>"
+                shared:
+                  clientId: "<path:portal/data/keycloak#shared-client-id>"
+                  clientSecret: "<path:portal/data/stable/keycloak#shared-client-secret>"
+              mailing:
+                host: "<path:portal/data/mailing#host>"
+                port: "<path:portal/data/mailing#port>"
+                user: "<path:portal/data/mailing#user>"
+                password: "<path:portal/data/mailing#password>"
+              registration:
+                logging:
+                  default: "Debug"
+                  bpdmLibrary: "Debug"
+                  registrationService: "Debug"
+                healthChecks:
+                  startup:
+                    tags:
+                    - name: "HEALTHCHECKS__0__TAGS__0"
+                      value: "keycloak"
+                    - name: "HEALTHCHECKS__0__TAGS__1"
+                      value: "portaldb"
+                swaggerEnabled: true
+              administration:
+                logging:
+                  default: "Debug"
+                  businessLogic: "Debug"
+                  sdfactoryLibrary: "Debug"
+                  bpdmLibrary: "Debug"
+                  custodianLibrary: "Debug"
+                healthChecks:
+                  startup:
+                    tags:
+                    - name: "HEALTHCHECKS__0__TAGS__0"
+                      value: "keycloak"
+                    - name: "HEALTHCHECKS__0__TAGS__1"
+                      value: "portaldb"
+                    - name: "HEALTHCHECKS__0__TAGS__2"
+                      value: "provisioningdb"
+                onboardingServiceProvider:
+                  encryptionKey: "<path:portal/data/stable/administration#onboardingserviceprovider-encryption-key>"
+                swaggerEnabled: true
+              provisioning:
+                sharedRealm:
+                  smtpServer:
+                    host: "<path:portal/data/mailing#host>"
+                    port: "<path:portal/data/mailing#port>"
+                    user: "<path:portal/data/mailing#user>"
+                    password: "<path:portal/data/mailing#password>"
+                    from: "<path:portal/data/mailing#from>"
+                    replyTo: "<path:portal/data/mailing#replyto>"
+              appmarketplace:
+                logging:
+                  default: "Debug"
+                  offersLibrary: "Debug"
+                healthChecks:
+                  startup:
+                    tags:
+                    - name: "HEALTHCHECKS__0__TAGS__0"
+                      value: "keycloak"
+                    - name: "HEALTHCHECKS__0__TAGS__1"
+                      value: "portaldb"
+                swaggerEnabled: true
+              portalmigrations:
+                logging:
+                  default: "Debug"
+                seeding:
+                  testDataEnvironments: "consortia"
+              notification:
+                healthChecks:
+                  startup:
+                    tags:
+                    - name: "HEALTHCHECKS__0__TAGS__0"
+                      value: "keycloak"
+                    - name: "HEALTHCHECKS__0__TAGS__1"
+                      value: "portaldb"
+                logging:
+                  default: "Debug"
+                swaggerEnabled: true
+              services:
+                logging:
+                  default: "Debug"
+                  offersLibrary: "Debug"
+                healthChecks:
+                  startup:
+                    tags:
+                    - name: "HEALTHCHECKS__0__TAGS__0"
+                      value: "keycloak"
+                    - name: "HEALTHCHECKS__0__TAGS__1"
+                      value: "portaldb"
+                swaggerEnabled: true
+              processesworker:
+                logging:
+                  default: "Debug"
+                  processesLibrary: "Debug"
+                  bpdmLibrary: "Debug"
+                  clearinghouseLibrary: "Debug"
+                  custodianLibrary: "Debug"
+                  sdfactoryLibrary: "Debug"
+                  offerProvider: "Debug"
+                bpdm:
+                  clientId: "<path:portal/data/processes-worker#bpdm-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#bpdm-client-secret>"
+                clearinghouse:
+                  clientId: "<path:portal/data/stable/processes-worker#clearinghouse-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#clearinghouse-client-secret>"
+                custodian:
+                  clientId: "<path:portal/data/processes-worker#custodian-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#custodian-client-secret>"
+                sdfactory:
+                  issuerBpn: "BPNL00000003CRHK"
+                  clientId: "<path:portal/data/processes-worker#sdfactory-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#sdfactory-client-secret>"
+                offerprovider:
+                  clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
+                  clientSecret: "<path:portal/data/stable/processes-worker#offerprovider-client-secret>"
+            postgresql:
+              auth:
+                password: "<path:portal/data/stable/postgres#postgres-password>"
+                replicationPassword: "<path:portal/data/stable/postgres#replication-password>"
+                portalPassword: "<path:portal/data/stable/postgres#portal-password>"
+                provisioningPassword: "<path:portal/data/stable/postgres#provisioning-password>"
+              primary:
+                extendedConfiguration: |
+                  max_connections = 200
+              readReplicas:
+                extendedConfiguration: |
+                  max_connections = 200
+    chart: portal
+  sources: []
   project: project-portal
-  syncPolicy:
-    automated:
-      prune: true
