--- a/consortia/environments/values-stable.yaml
+++ b/consortia/environments/values-stable.yaml
@@ -149,6 +149,8 @@ backend:
           value: "portaldb"
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
+    onboardingServiceProvider:
+      encryptionKey: "<path:portal/data/administration#onboardingserviceprovider-encryption-key>"
     swaggerEnabled: true
 
   provisioning:
@@ -230,6 +232,8 @@ backend:
     offerprovider:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/stable/processes-worker#offerprovider-client-secret>"
+    onboardingServiceProvider:
+      encryptionKey: "<path:portal/data/processes-worker#process-onboardingserviceprovider-encryption-key>"
 
 postgresql:
   auth:
