--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -150,6 +150,8 @@ backend:
           value: "portaldb"
         - name: "HEALTHCHECKS__0__TAGS__2"
           value: "provisioningdb"
+    onboardingServiceProvider:
+      encryptionKey: "<path:portal/data/administration#onboardingserviceprovider-encryption-key>"
     swaggerEnabled: true
 
   provisioning:
@@ -231,6 +233,8 @@ backend:
     offerprovider:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#offerprovider-client-secret>"
+    onboardingServiceProvider:
+      encryptionKey: "<path:portal/data/processes-worker#process-onboardingserviceprovider-encryption-key>"
 
 postgresql:
   auth:
