chore(app&service) : added activationPortalAddress url (#93)
Refs: CPLP-3202
Reviewed-By: Phil Schneider <info@philschneider.de>

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -110,6 +110,8 @@ spec:
           value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role1 }}"
         - name: "APPMARKETPLACE__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+        - name: "APPMARKETPLACE__ACTIVATIONPORTALADDRESS"
+          value: "{{ .Values.portalAddress }}"
         - name: "APPMARKETPLACE__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "APPMARKETPLACE__CATENAADMINROLES__0__CLIENTID"
