--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -191,6 +191,8 @@ spec:
                   key: "central-client-secret"
             - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
               value: "{{ .Values.centralidpAddress }}"
+            - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
+              value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
             - name: "KEYCLOAK__SHARED__AUTHREALM"
               value: "{{ .Values.backend.keycloak.shared.authRealm }}"
             - name: "KEYCLOAK__SHARED__CLIENTID"
@@ -202,6 +204,8 @@ spec:
                   key: "shared-client-secret"
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
+            - name: "KEYCLOAK__SHARED__USEAUTHTRAIL"
+              value: "{{ .Values.backend.keycloak.shared.useAuthTrail }}"
             - name: "SERILOG__MINIMUMLEVEL__Default"
               value: "{{ .Values.backend.processesworker.logging.default }}"
             - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Processes.Worker.Library"
