--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -238,6 +238,8 @@ spec:
               key: "central-client-secret"
         - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
           value: "{{ .Values.centralidpAddress }}"
+        - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
+          value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
         - name: "KEYCLOAK__SHARED__AUTHREALM"
           value: "{{ .Values.backend.keycloak.shared.authRealm }}"
         - name: "KEYCLOAK__SHARED__CLIENTID"
@@ -249,6 +251,8 @@ spec:
               key: "shared-client-secret"
         - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
           value: "{{ .Values.sharedidpAddress }}"
+        - name: "KEYCLOAK__SHARED__USEAUTHTRAIL"
+          value: "{{ .Values.backend.keycloak.shared.useAuthTrail }}"
         - name: "SERILOG__MINIMUMLEVEL__Default"
           value: "{{ .Values.backend.appmarketplace.logging.default }}"
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Offers.Library.Service"
