fix(portal): change to ingress.className changed to ingress.ingressClassName when removing deprecated ingress annotation 'kubernetes.io/ingress.class' but that value isn't available

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -56,7 +56,7 @@ frontend:
   # -- Portal frontend ingress parameters,
     # enable ingress record generation for portal frontend.
     enabled: false
-    ingressClassName: "nginx"
+    className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$1"
       nginx.ingress.kubernetes.io/use-regex: "true"
@@ -143,6 +143,7 @@ backend:
     # enable ingress record generation for portal-backend.
     enabled: false
     name: "portal-backend"
+    className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/use-regex: "true"
       nginx.ingress.kubernetes.io/enable-cors: "true"
