--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -33,7 +33,7 @@ frontend:
 
   ingress:
     enabled: true
-    ingressClassName: "nginx"
+    className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/rewrite-target: "/$1"
       nginx.ingress.kubernetes.io/use-regex: "true"
@@ -65,6 +65,7 @@ frontend:
 backend:
   ingress:
     enabled: true
+    className: "nginx"
     annotations:
       nginx.ingress.kubernetes.io/use-regex: "true"
       nginx.ingress.kubernetes.io/enable-cors: "true"
