fix(portal): fix escaping of secret values

--- a/charts/portal/templates/secret-backend-external-db.yaml
+++ b/charts/portal/templates/secret-backend-external-db.yaml
@@ -36,7 +36,7 @@ data:
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  portal-password: {{ ( .Values.externalDatabase.portalPassword | quote ) | default ( randAlphaNum 32 | quote ) }}
-  provisioning-password: {{ ( .Values.externalDatabase.provisioningPassword | quote ) | default ( randAlphaNum 32 | quote ) }}
+  portal-password: {{ .Values.externalDatabase.portalPassword | default ( randAlphaNum 32 ) | quote }}
+  provisioning-password: {{ .Values.externalDatabase.provisioningPassword | default ( randAlphaNum 32) | quote }}
 {{ end }}
 {{- end -}}
