--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -40,11 +40,11 @@ data:
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  bpdm-client-secret: {{ ( .Values.backend.processesworker.bpdm.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  clearinghouse-client-secret: {{ ( .Values.backend.processesworker.clearinghouse.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  custodian-client-secret: {{ ( .Values.backend.processesworker.custodian.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  sdfactory-client-secret: {{ ( .Values.backend.processesworker.sdfactory.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  offerprovider-client-secret: {{ ( .Values.backend.processesworker.offerprovider.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  onboardingserviceprovider-encryption-key: {{ .Values.backend.administration.onboardingServiceProvider.encryptionKey | quote | default ( randAlphaNum 32 | quote ) }}
-  process-onboardingserviceprovider-encryption-key: {{ .Values.backend.processesworker.onboardingServiceProvider.encryptionKey | quote | default ( randAlphaNum 32 | quote ) }}
+  bpdm-client-secret: {{ .Values.backend.processesworker.bpdm.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  clearinghouse-client-secret: {{ .Values.backend.processesworker.clearinghouse.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  custodian-client-secret: {{ .Values.backend.processesworker.custodian.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  sdfactory-client-secret: {{ .Values.backend.processesworker.sdfactory.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  offerprovider-client-secret: {{ .Values.backend.processesworker.offerprovider.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  onboardingserviceprovider-encryption-key: {{ .Values.backend.administration.onboardingServiceProvider.encryptionKey | default ( randAlphaNum 32 ) | quote }}
+  process-onboardingserviceprovider-encryption-key: {{ .Values.backend.processesworker.onboardingServiceProvider.encryptionKey | default ( randAlphaNum 32 ) | quote }}
 {{ end }}
