--- a/charts/portal/templates/secret-backend-keycloak.yaml
+++ b/charts/portal/templates/secret-backend-keycloak.yaml
@@ -36,7 +36,7 @@ data:
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  central-db-password: {{ ( .Values.backend.keycloak.central.dbConnection.password | quote ) | default ( randAlphaNum 32 | quote ) }}
-  central-client-secret: {{ ( .Values.backend.keycloak.central.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
-  shared-client-secret: {{ ( .Values.backend.keycloak.shared.clientSecret | quote ) | default ( randAlphaNum 32 | quote ) }}
+  central-db-password: {{ .Values.backend.keycloak.central.dbConnection.password | default ( randAlphaNum 32 ) | quote }}
+  central-client-secret: {{ .Values.backend.keycloak.central.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  shared-client-secret: {{ .Values.backend.keycloak.shared.clientSecret | default ( randAlphaNum 32 ) | quote }}
 {{ end }}
