--- a/charts/portal/templates/secret-backend-mailing.yaml
+++ b/charts/portal/templates/secret-backend-mailing.yaml
@@ -35,6 +35,6 @@ data:
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  password: {{ ( .Values.backend.mailing.password | quote ) | default ( randAlphaNum 32 | quote ) }}
-  provisioning-sharedrealm-password: {{ ( .Values.backend.provisioning.sharedRealm.smtpServer.password | quote ) | default ( randAlphaNum 32 | quote ) }}
+  password: {{ .Values.backend.mailing.password | default ( randAlphaNum 32 ) | quote }}
+  provisioning-sharedrealm-password: {{ .Values.backend.provisioning.sharedRealm.smtpServer.password | default ( randAlphaNum 32 ) | quote }}
 {{ end }}
