--- a/charts/portal/templates/secret-backend-postgres-init.yaml
+++ b/charts/portal/templates/secret-backend-postgres-init.yaml
@@ -38,9 +38,9 @@ data:
 {{ else -}}
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
-  postgres-password: {{ .Values.postgresql.auth.password | default ( randAlphaNum 32 | quote ) }}
-  replication-password: {{ .Values.postgresql.auth.replicationPassword | default ( randAlphaNum 32 | quote ) }}
-  portal-password: {{ .Values.postgresql.auth.portalPassword | default ( randAlphaNum 32 | quote ) }}
-  provisioning-password: {{ .Values.postgresql.auth.provisioningPassword | default ( randAlphaNum 32 | quote ) }}
+  postgres-password: {{ .Values.postgresql.auth.password | default ( randAlphaNum 32 ) | quote }}
+  replication-password: {{ .Values.postgresql.auth.replicationPassword | default ( randAlphaNum 32 ) | quote }}
+  portal-password: {{ .Values.postgresql.auth.portalPassword | default ( randAlphaNum 32 ) | quote }}
+  provisioning-password: {{ .Values.postgresql.auth.provisioningPassword | default ( randAlphaNum 32 ) | quote }}
 {{ end }}
 {{- end -}}
