--- a/.github/workflows/localdev-chart-test.yaml
+++ b/.github/workflows/localdev-chart-test.yaml
@@ -82,11 +82,62 @@ jobs:
       - name: Run chart-testing (lint)
         run: ct lint --charts charts/localdev --config charts/chart-testing-config.yaml
 
+      - name: Enalbe TLS setup on KinD cluster
+        run: |
+          helm repo add jetstack https://charts.jetstack.io
+          helm repo update
+          helm install \
+            cert-manager jetstack/cert-manager \
+            --namespace default \
+            --version v1.13.0 \
+            --set installCRDs=true
+          kubectl apply -f - <<EOF
+          apiVersion: cert-manager.io/v1
+          kind: ClusterIssuer
+          metadata:
+            name: selfsigned-issuer
+          spec:
+            selfSigned: {}
+          ---
+          apiVersion: cert-manager.io/v1
+          kind: Certificate
+          metadata:
+            name: my-selfsigned-ca
+            namespace: default
+          spec:
+            isCA: true
+            commonName: cx.local
+            secretName: root-secret
+            privateKey:
+              algorithm: RSA
+              size: 2048
+            issuerRef:
+              name: selfsigned-issuer
+              kind: ClusterIssuer
+              group: cert-manager.io
+            subject:
+              organizations:
+                - CX
+              countries:
+                - DE
+              provinces:
+                - Some-State
+          ---
+          apiVersion: cert-manager.io/v1
+          kind: ClusterIssuer
+          metadata:
+            name: my-ca-issuer
+          spec:
+            ca:
+              secretName: root-secret
+          EOF
+        if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
+
       - name: Run helm install
         run: |
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
           helm repo add pgadmin4 https://helm.runix.net
-          helm install local charts/localdev --namespace install --create-namespace
+          helm install local charts/localdev
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
       #   # Upgrade the released localdev chart version with the locally available chart
